12-kuber-homeworks-2.3/src/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-service
spec:
  selector:
    app: nginx-multitool
  ports:
    - name: nginx-port
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 80
    - name: multitool-port
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
